alpm-types/src/version/snapshots/base::invalid_pkgver@case_4.snap
---
source: alpm-types/src/version/base.rs
---
error: invalid character
 | 
 | ß
 | ^ expected an ASCII character, except for ':', '/', '-', '<', '>', '=', or any whitespace characters
 | 
 = while parsing:
   alpm-pkgver: (ß)
   → invalid character
   → expected an ASCII character, except for ':', '/', '-', '<', '>', '=', or any whitespace characters
